# easyqrpng

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/modules/: FindQREncode.cmake  FindQREncodeWin.cmake
include/easyqrpng/: easyqrpng.h  easyqrpngpp.h  errors.h
sample/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  easyqrpng.c  easyqrpngpp.cpp  errors.c
